@@ -1,5 +1,12 @@
 2010-05-25 Raúl Mateos <raulofpandora@gmail.com>
 
+	* operation/menu.php, operation/snmpconsole/snmp_view: Updated year.
+	Clean Code.
+
+	* godmode/agentes/agent_conf_gis.php: Improved usability.
+
+2010-05-25 Raúl Mateos <raulofpandora@gmail.com>
+
 	* extensions/update_manager/lib/*.php: Updated year, clean code.
 
 	* extensions/update_manager/lib/libupdate_manager.php: Improved usability.
